--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
+                    <img src="./img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
                             <a class="nav-link" href="#footer">Контакты</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/price.html">Стоимость</a>
+                            <a class="nav-link" href="price.html">Стоимость</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Полезная информация</a>
