--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <a class="nav-link" href="#footer">Контакты</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="price.html">Стоимость</a>
+                            <a class="nav-link" href="./price.html">Стоимость</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Полезная информация</a>
@@ -96,7 +96,7 @@
                     <div class="row justify-content-md-center">
                         <div class="col-xl-3 col-md-6">
                             <div class="foto">
-                                <img class="img-thumbnail rounded float-center" src="./img/IMG_20191002_120739.jpg" alt="foto">
+                                <img class="img-thumbnail rounded float-center" src="img/IMG_20191002_120739.jpg" alt="foto">
                             </div>
                         </div>
                         <div class="col-xl-7 col-md-6">
