--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
+                    <img src="img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
                             <a class="nav-link" href="#footer">Контакты</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="advokat_zhilyaev2/price.html">Стоимость</a>
+                            <a class="nav-link" href="./price.html">Стоимость</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Полезная информация</a>
@@ -96,7 +96,7 @@
                     <div class="row justify-content-md-center">
                         <div class="col-xl-3 col-md-6">
                             <div class="foto">
-                                <img class="img-thumbnail rounded float-center" src="advokat_zhilyaev2/img/IMG_20191002_120739.jpg" alt="foto">
+                                <img class="img-thumbnail rounded float-center" src="img/IMG_20191002_120739.jpg" alt="foto">
                             </div>
                         </div>
                         <div class="col-xl-7 col-md-6">
@@ -133,7 +133,7 @@
                             <div class="services-block">
                                 <h2 class="block-title">УГОЛОВНЫЕ ДЕЛА</h2>
                                 <div class="block-list">
-                                    <img src="advokat_zhilyaev2/img/criminal-law.png" alt="criminal-law">
+                                    <img src="img/criminal-law.png" alt="criminal-law">
                                     <ul class="block-list_adaptiv">
                                         <li>Защита на предварительном следствии и в суде</li>
                                         <li>Обжалование решений следственных органов</li>
@@ -151,7 +151,7 @@
                             <div class="services-block">
                                 <h2 class="block-title">АДМИНИСТРАТИВНЫЕ ДЕЛА</h2>
                                 <div class="block-list">
-                                    <img src="advokat_zhilyaev2/img/admin-law.png" alt="">
+                                    <img src="img/admin-law.png" alt="">
                                     <ul class="block-list_adaptiv">
                                         <li>Участие в административных делах</li>
                                         <li>Обжалование административных наказаний</li>
@@ -168,7 +168,7 @@
                             <div class="services-block">
                                 <h2 class="block-title">ГРАЖДАНСКИЕ ДЕЛА</h2>
                                 <div class="block-list">
-                                    <img src="advokat_zhilyaev2/img/bank_icon_150021.png" alt="">
+                                    <img src="img/bank_icon_150021.png" alt="">
                                     <ul class="block-list_adaptiv">
                                         <li>возмещение ущерба</li>
                                         <li>взыскание долгов</li>
@@ -186,7 +186,7 @@
                             <div class="services-block">
                                 <h2 class="block-title">СЕМЕЙНЫЕ СПОРЫ</h2>
                                 <div class="block-list">
-                                    <img src="advokat_zhilyaev2/img/family-law1.png" alt="">
+                                    <img src="img/family-law1.png" alt="">
                                     <ul class="block-list_adaptiv">
                                         <li>взыскание алиментов</li>
                                         <li>процедура развода</li>
