--- a/price.html
+++ b/price.html
@@ -59,7 +59,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
+                    <img src="img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -67,10 +67,10 @@
                 <div class="collapse navbar-collapse header-nav" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Главная</a>
+                            <a class="nav-link" href="index.html">Главная</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html#services">Услуги</a>
+                            <a class="nav-link" href="index.html#services">Услуги</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#footer">Контакты</a>
@@ -255,7 +255,7 @@
             <div class="row text-center align-item space-beetwen">
                 <div class="col-xl-2 col-lg-12 col-md-12">
                     <a class="navbar-brand" href="#">
-                        <img src="/img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
+                        <img src="img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
                     </a>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6">
