--- a/grazhdanskoe-pravo.html
+++ b/grazhdanskoe-pravo.html
@@ -103,7 +103,7 @@
                         <h1 class="prof-title">Гражданские дела</h1>
                     </div>
                     <div class="col-xxl-5 offset-xxl-1 col-md-6 mt-3 text-center">
-                        <img src="civil.jpg" width="400" height="300" alt="">
+                        <img class="criminal-img" src="civil.jpg" width="400" height="300" alt="">
                     </div>
                     <div class="col-md-6">
                         <h3> </h3>
