--- a/admin-law.html
+++ b/admin-law.html
@@ -57,7 +57,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
+                    <img class="criminal-img" src="img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
