--- a/admin-law.html
+++ b/admin-law.html
@@ -57,7 +57,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img class="criminal-img" src="img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
+                    <img src="img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -103,7 +103,7 @@
                         <h1 class="prof-title">Административные дела</h1>
                     </div>
                     <div class="col-xxl-5 offset-xxl-1 col-md-6 mt-3 text-center">
-                        <img src="img/admin.jpg" width="400" height="300" alt="">
+                        <img class="criminal-img" src="img/admin.jpg" width="400" height="300" alt="">
                     </div>
                     <div class="col-xxl-6 col-md-6">
                         <h3 class="prof-text">За административные правонарушения граждане и юридические лица наказываются денежными штрафами, арестом, лишением прав и т.п. Адвокат по административным делам может обжаловать принятое по административному правонарушению решение,
@@ -118,7 +118,7 @@
                             <li>помощь при нарушениях в сфере пожарной безопасности</li>
                             <li>помощь при нарушениях в сфере миграционного законодательства</li>
                         </ul>
-                        <a href="/index.html#services" class="arrow-back">
+                        <a href="index.html#services" class="arrow-back">
                             <<< назад</a>
                     </div>
                 </div>
