--- a/family-law.html
+++ b/family-law.html
@@ -103,7 +103,7 @@
                         <h1 class="prof-title">Семейные споры</h1>
                     </div>
                     <div class="col-xxl-5 offset-xxl-1 col-md-6 mt-3 text-center">
-                        <img src="img/razvod.png" width="400" height="300" alt="">
+                        <img class="criminal-img" src="img/razvod.png" width="400" height="300" alt="">
                     </div>
                     <div class="col-xxl-6 col-md-6">
                         <h3 class="prof-text">Семейные споры — распространённая категория гражданских дел. Указанные дела разрешаются как мирным путём, так и в судебном порядке — в обоих случаях требуется оказание грамотной юридической помощи. </h3>
