--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <div class="row text-center align-item space-beetwen">
                 <div class="col-xl-2 col-lg-12 col-md-12">
                     <a class="navbar-brand" href="#">
-                        <img src="/img/pngwing3.png" class="footer-logo" alt="logo" width="200" height="70" class="d-inline-block align-text-top">
+                        <img src="img/pngwing3.png" class="footer-logo" alt="logo" width="200" height="70" class="d-inline-block align-text-top">
                     </a>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6">
