--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-12">
                     <div class="social-link">
-                        <a href="viber://chat?number=%279058195666"><img src="img/viber.png" alt="" width="30" height="30"></a>
-                        <a href="https://telegram.me/AndreyZhilyaev"><img src="img/telegram.png" alt="" width="30" height="30"></a>
-                        <a href="https://wa.me/+79058195666?text=Привет! Хочу записаться на консультацию"><img src="img/whatsapp.png" alt="" width="30" height="30"></a>
+                        <a href="viber://chat?number=%279058195666"><img src="viber.png" alt="" width="30" height="30"></a>
+                        <a href="https://telegram.me/AndreyZhilyaev"><img src="telegram.png" alt="" width="30" height="30"></a>
+                        <a href="https://wa.me/+79058195666?text=Привет! Хочу записаться на консультацию"><img src="whatsapp.png" alt="" width="30" height="30"></a>
                     </div>
                 </div>
             </div>
