--- a/ugolovnie-dela.html
+++ b/ugolovnie-dela.html
@@ -136,25 +136,26 @@
             <div class="row text-center align-item space-beetwen">
                 <div class="col-xl-2 col-lg-12 col-md-12">
                     <a class="navbar-brand" href="#">
-                        <img src="img/pngwing3.png" alt="" width="240" height="80" class="d-inline-block align-text-top">
+                        <img src="img/pngwing3.png" class="footer-logo" alt="logo" width="200" height="70" class="d-inline-block align-text-top">
                     </a>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="footer-adress">
                         <p>г. Оренбург ул. Цвилинга д. 29</p>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-4 col-md-6">
-                    <div class="footer-text">
                         <p>Режим работы ПН-ВС <br> с 08.00 до 23.00</p>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-4 col-md-12">
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="contact">
-                        <img class="contact-img" src="img/mail.png" alt=""><a class="contact" href="mailto:advokat_zhilyaev@bk.ru">advokat_zhilyaev@bk.ru</a>
+                        <a href="mailto:advokat_zhilyaev@bk.ru" class="contact-link"><img class="contact-icon" src="img/mail.png" alt="" width="25" height="20">advokat_zhilyaev@bk.ru</a>
+                        <a href="tel:+79058195666" class="contact-link"><img class="contact-icon phone" src="img/phone.png" alt="" width="20" height="20">+7(905)8195666</a>
                     </div>
-                    <div class="contact">
-                        <img class="contact-img" src="img/phone.png" alt=""><a class="contact" href="tel:+79058195666">+7(905)8195666</a>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-12">
+                    <div class="social-link">
+                        <a href="viber://%279058195666"><img src="viber.png" alt="" width="30" height="30"></a>
+                        <a href="https://telegram.me/AndreyZhilyaev"><img src="telegram.png" alt="" width="30" height="30"></a>
+                        <a href="https://wa.me/+79058195666?text=Привет! Хочу записаться на консультацию"><img src="whatsapp.png" alt="" width="30" height="30"></a>
                     </div>
                 </div>
             </div>
