--- a/price.html
+++ b/price.html
@@ -109,7 +109,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">Уголовные дело</th>
+                        <th class="yellow" scope="row">Уголовные дело</th>
                         <td>Участие на предварительном следствии в качестве защитника подозреваемого (обвиняемого)</td>
                         <td>от 50 000 руб.</td>
 
@@ -153,7 +153,7 @@
                 </tbody>
                 <tbody>
                     <tr>
-                        <th scope="row">Гражданские дела</th>
+                        <th class="yellow" scope="row">Гражданские дела</th>
                         <td>О разделе наследственного имущества. О признании наследником. О признании завещания недействительным</td>
                         <td>от 20 000 руб.</td>
                     </tr>
@@ -189,7 +189,7 @@
                 </tbody>
                 <tbody>
                     <tr>
-                        <th scope="row">Семейные споры</th>
+                        <th class="yellow" scope="row">Семейные споры</th>
                         <td>Расторжение брака. Раздел совместнонажитого имущества</td>
                         <td>от 15 000 руб.</td>
                     </tr>
@@ -213,7 +213,7 @@
                 </tbody>
                 <tbody>
                     <tr>
-                        <th scope="row">Административные дела</th>
+                        <th class="yellow" scope="row">Административные дела</th>
                         <td>Обжалование постановлений об административных правонарушениях</td>
                         <td>от 10 000 руб.</td>
                     </tr>
