--- a/price.html
+++ b/price.html
@@ -109,7 +109,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th class="yellow" scope="row">Уголовные дело</th>
+                        <th class="yellow" scope="row">Уголовные дела</th>
                         <td>Участие на предварительном следствии в качестве защитника подозреваемого (обвиняемого)</td>
                         <td>от 50 000 руб.</td>
 
